# cambridge-asm

./: .editorconfig  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.circleci/: Dockerfile  config.yml  release.py
.docker/: Dockerfile  docker-build.py
.github/: buildall.py  getversion-cli.py  getversion-ghcr.py  getversion-lib.py  getversion.py
.github/workflows/: build.yml  publish-cli.yml  publish-ghcr.yml  publish-lib.yml  release-container.yml  release.yml  rust.yml  test.yml
cambridge-asm/: Cargo.toml  README.md
cambridge-asm-cli/: Cargo.toml  README.md
cambridge-asm-cli/src/: main.rs
cambridge-asm/examples/: division.pasm  panics.pasm
cambridge-asm/src/: compile.rs  inst.rs  lib.rs  parse.rs
cambridge-asm/src/exec/: arith.rs  bitman.rs  cmp.rs  debug.rs  error.rs  inst.rs  io.rs  memory.rs  mod.rs  mov.rs
cambridge-asm/src/parse/: lexer.rs  mod.rs  parser.rs
cambridge-asm/tests/: extension.rs  int_test.rs
cli/: Cargo.toml  README.md  build.rs
cli/src/: main.rs
examples/: bench.pasm  division.pasm  ex1.pasm  ex2.pasm  ex3.pasm  functions.pasm  hello.pasm
lib/: Cargo.toml  README.md  test_stdio.rs  test_stdout.rs
lib/examples/: multiplication.pasm  showoff.pasm
lib/src/: compile.rs  inst.rs  lib.rs
lib/src/exec/: arith.rs  bitman.rs  cmp.rs  debug.rs  error.rs  inst.rs  io.rs  memory.rs  mod.rs  mov.rs
lib/src/parse/: lexer.rs  mod.rs  parser.rs
lib/tests/: int_test.rs
src/: cli.yml  compile.rs  lib.rs  main.rs  parse.rs  pasm.pest
src/exec/: arith.rs  bitman.rs  cmp.rs  error.rs  inst.rs  io.rs  memory.rs  mod.rs  mov.rs
tests/: extension.rs
