[package]
name = "cambridge-asm"
version = "0.9.0"
authors = ["SaadiSave <https://github.com/SaadiSave>"]
edition = "2018"
license = "MPL-2.0"
description = "Run pseudoassembly from Cambridge International syllabus 9618"
repository = "https://github.com/SaadiSave/cambridge-asm"

[[bin]]
name = "casm"
path = "src/main.rs"

[features]
cambridge = []

[dependencies]
pest = "2.1"
pest_derive = "2.1"
log = "0.4"
env_logger = "0.8"

[dependencies.clap]
version = "2.33"
features = ["yaml"]
