[package]
name = "cambridge-asm"
version = "0.11.1"
authors = ["SaadiSave <https://github.com/SaadiSave>"]
edition = "2021"
license = "MPL-2.0"
description = "Run pseudoassembly from Cambridge International syllabus 9618"
repository = "https://github.com/SaadiSave/cambridge-asm"
rust-version = "1.59"

[[bin]]
name = "casm"
path = "src/main.rs"

[features]
cambridge = []

[dependencies]
pest = "2.1"
pest_derive = "2.1"
log = "0.4"
env_logger = "0.9"
regex = "1.5.4"
proc-macro2 = "1.0.36"

[dependencies.clap]
version = "3.0"
features = ["derive"]

[profile.prod]
inherits = "release"
lto = true
