[package]
name = "cambridge-asm"
version = "0.15.2"
authors = ["SaadiSave <https://github.com/SaadiSave>"]
edition = "2021"
license = "MPL-2.0"
description = "Run pseudoassembly from Cambridge International syllabus 9618"
repository = "https://github.com/SaadiSave/cambridge-asm"
rust-version = "1.59"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["compile", "extended"]
extended = []
compile = ["serde", "bincode"]

[dependencies]
pest = "2.1"
pest_derive = "2.1"
log = "0.4"
regex = "1.5"

[dependencies.bincode]
version = "2.0.0-rc.1"
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dev-dependencies]
serde_json = "1"
