[package]
name = "cambridge-asm-cli"
version = "0.14.0"
authors = ["SaadiSave <https://github.com/SaadiSave>"]
edition = "2021"
license = "MPL-2.0"
description = "Run pseudoassembly from Cambridge International syllabus 9618"
repository = "https://github.com/SaadiSave/cambridge-asm"
rust-version = "1.59"

[[bin]]
name = "casm"
path = "src/main.rs"

[features]
default = ["cambridge-asm/default"]

[dependencies]
env_logger = "0.9"
serde_json = "1"
ron = "0.7"
serde_yaml = "0.8"
bincode = "2.0.0-rc.1"

[dependencies.cambridge-asm]
version = "0.15"
default-features = false
features = ["compile"]

[dependencies.clap]
version = "3"
features = ["derive"]
