[package]
name = "cambridge-asm-cli"
version = "0.15.2"
authors = ["SaadiSave <https://github.com/SaadiSave>"]
edition = "2021"
license = "MPL-2.0"
description = "Run pseudoassembly from Cambridge International syllabus 9618"
repository = "https://github.com/SaadiSave/cambridge-asm"
rust-version = "1.70"

[[bin]]
name = "casm"
path = "src/main.rs"

[features]
default = ["cambridge-asm/default"]

[dependencies]
env_logger = "0.10"
serde_json = "1"
ron = "0.8"
serde_yaml = "0.9"
bincode = "2.0.0-rc.3"
anyhow = "1"

[dependencies.cambridge-asm]
version = "0.19.0"
default-features = false
features = ["compile"]

[dependencies.clap]
version = "4"
features = ["derive"]

[build-dependencies]
cargo_toml = "0.17"
