[package]
name = "cambridge-asm-cli"
version = "0.16.0"
authors = ["SaadiSave <https://github.com/SaadiSave>"]
edition = "2021"
license = "MPL-2.0"
description = "Run pseudoassembly from Cambridge International syllabus 9618"
repository = "https://github.com/SaadiSave/cambridge-asm"
rust-version = "1.81"

[[bin]]
name = "casm"
path = "src/main.rs"

[features]
default = ["cambridge-asm/default"]

[dependencies]
env_logger = "0.11"
serde_json = "1"
ron = "0.12.0"
serde_yaml = "0.9"
anyhow = "1"
ciborium = "0.2.2"

[dependencies.cambridge-asm]
version = "0.22.0"
default-features = false
features = ["compile"]

[dependencies.clap]
version = "4"
features = ["derive"]

[build-dependencies]
cargo_toml = "0.22.3"
